widget.scss/button.scss/comments, html code prettier

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <header class="main-image">
             <div class="header">
                 <div class="logo">
-                    <a href="index.html" class="logo"
-                        ><img src="img/logo.svg" alt="JustHome_logo"
-                    /></a>
+                    <a href="index.html" class="logo">
+                        <img src="img/logo.svg" alt="JustHome_logo" />
+                    </a>
                 </div>
                 <nav class="navbar">
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="">
+                            <a href="#">
                                 Home
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -39,7 +39,7 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="">
+                            <a href="#">
                                 Listings
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="">
+                            <a href="#">
                                 Members
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -65,7 +65,7 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="">
+                            <a href="#">
                                 Blog
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -78,7 +78,7 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="">
+                            <a href="#">
                                 Pages
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -97,31 +97,13 @@
                     </div>
                     <div>
                         <div class="some-text">
-                            <a class="button" href="#popup"><img src="/img/profile_icon.svg" alt="profile_icon" /><a />
-                          </div>
-                        
-                          <div class="popup" id="popup">
-                            <div class="form">
-                                <div class="title">Welcome</div>
-                                <div class="subtitle">Let's create your account!</div>
-                                <div class="input-container ic1">
-                                  <input id="firstname" class="input" type="text" placeholder=" " />
-                                  <div class="cut"></div>
-                                  <label for="firstname" class="placeholder">First name</label>
-                                </div>
-                                <div class="input-container ic2">
-                                  <input id="lastname" class="input" type="text" placeholder=" " />
-                                  <div class="cut"></div>
-                                  <label for="lastname" class="placeholder">Last name</label>
-                                </div>
-                                <div class="input-container ic2">
-                                  <input id="email" class="input" type="text" placeholder=" " />
-                                  <div class="cut cut-short"></div>
-                                  <label for="email" class="placeholder">Email</>
-                                </div>
-                                <button type="text" class="submit">submit</button>
-                              </div>
-                          </div>
+                            <a class="button" href="#popup">
+                                <img
+                                    src="/img/profile_icon.svg"
+                                    alt="profile_icon"
+                                />
+                            </a>
+                        </div>
                     </div>
                     <button class="add-button" type="button">
                         Add Property
@@ -133,9 +115,9 @@
                     <span class="heading-primary-main"
                         >Believe in finding it</span
                     >
-                    <span class="heading-primary-sub"
-                        >Search properties for sale and to rent in the UK</span
-                    >
+                    <span class="heading-primary-sub">
+                        Search properties for sale and to rent in the UK
+                    </span>
                 </h1>
                 <div class="search">
                     <input
@@ -193,6 +175,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Dunlicated widgets -->
                     <div class="widget">
                         <div class="image-background"></div>
                         <div class="widget-description">
@@ -309,6 +292,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Dunlicated widgets -->
                     <div class="widget">
                         <div class="image-background"></div>
                         <div class="widget-description">
@@ -666,153 +650,18 @@
                 </div>
             </section>
         </main>
-        <!-- <footer class="footer-background">
-            <div class="footer-main">
-                <div class="footer-top-block">
-                    <a href="index.html" class="logo"
-                        ><img src="img/logo-white.svg" alt="JustHome_logo"
-                    /></a>
-                    <div class="footer-social-network">
-                        <p>Follow Us</p>
-                        <div class="social-network-icon">
-                            <img src="img/fb-icon.svg" alt="fb-icon" />
-                            <img src="img/x-icon.svg" alt="x-icon" />
-                            <img src="img/ig-icon.svg" alt="ig-icon" />
-                            <img
-                                src="img/linked-icon.svg"
-                                alt="linkedin-icon"
-                            />
-                        </div>
-                    </div>
-                </div>
-                <div class="horizontal-line"></div>
-                <div class="footer-mid-row">
-                    <div class="footer-navigation-form">
-                        <p class="footer-nav-title">Subscribe</p>
-                        <div class="subscribe-content">
-                            <form class="email">
-                                <input
-                                    type="email"
-                                    class="emailInput"
-                                    placeholder="Your e-mail"
-                                />
-                                <button class="mail-button" type="button">
-                                    Send
-                                    <img
-                                        src="img/white-arrow.svg"
-                                        alt="arrow-for-button-icon"
-                                    />
-                                </button>
-                            </form>
-                            <div class="horizontal-line"></div>
-                            <p>
-                                Subscribe to our newsletter to receive our
-                                weekly feed.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="footer-navigation">
-                        <p class="footer-nav-title">Discover</p>
-                        <ul>
-                            <li>Miami</li>
-                            <li>New York</li>
-                            <li>Chicago</li>
-                            <li>Florida</li>
-                            <li>Los Angeles</li>
-                            <li>San Diego</li>
-                        </ul>
-                    </div>
-                    <div class="footer-navigation">
-                        <p class="footer-nav-title">Quick Links</p>
-                        <ul>
-                            <li>About</li>
-                            <li>Contact</li>
-                            <li>FAQ’s</li>
-                            <li>Blog</li>
-                            <li>Pricing Plans</li>
-                            <li>Privacy Policy</li>
-                            <li>Terms & Conditions</li>
-                        </ul>
-                    </div>
-                    <div class="footer-navigation">
-                        <p class="footer-nav-title">Contact Us</p>
-                        <ul>
-                            <li>
-                                <a href="tel:+1234567890">+(123) 456-7890</a>
-                            </li>
-                            <li>
-                                <a href="mailto:hi@justhome.com"
-                                    >hi@justhome.com</a
-                                >
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer-navigation">
-                        <p class="footer-nav-title">Our Address</p>
-                        <ul>
-                            <li>
-                                <a
-                                    href="https://maps.app.goo.gl/DXTjDuNWQTF2Tfi68"
-                                    target="_blank"
-                                    >99 Fifth Avenue, 3rd Floor San Francisco,
-                                    CA 1980</a
-                                >
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer-navigation-app">
-                        <p class="footer-nav-title">Get the app</p>
-                        <div class="app">
-                            <div class="get-app">
-                                <a href="https://www.apple.com/app-store/">
-                                    <div class="get-app-content">
-                                        <div>
-                                            <img
-                                                src="img/apple-icon.png"
-                                                alt="apple-icon"
-                                            />
-                                        </div>
-                                        <div class="vertical-line"></div>
-                                        <div class="store">
-                                            <p>Download on the</p>
-                                            <p>Apple Store</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="get-app">
-                                <a href="https://play.google.com/store">
-                                    <div class="get-app-content">
-                                        <div>
-                                            <img
-                                                src="img/playstore-icon.png"
-                                                alt="playstore-icon"
-                                            />
-                                        </div>
-                                        <div class="vertical-line"></div>
-                                        <div class="store">
-                                            <p>Get in on</p>
-                                            <p>Google Play</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="horizontal-line"></div>
-                <div class="footer-bottom-row">
-                    <p>Copyright © 2024. JustHome</p>
-                </div>
+        <footer>
+            <div class="iframe-footer-conteiner">
+                <iframe
+                    class="iframe-footer"
+                    src="/components/footer.html"
+                    scrolling="no"
+                    frameborder="0"
+                    width="100%"
+                    height="auto"
+                ></iframe>
             </div>
-        </footer> -->
-        <div class="iframe-footer-conteiner">
-            <iframe
-                class="iframe-footer"
-                src="/components/footer.html"
-                scrolling="no"
-            ></iframe>
-        </div>
+        </footer>
         <script
             src="https://kit.fontawesome.com/7d14a42481.js"
             crossorigin="anonymous"
