--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -12,24 +12,23 @@
             href="../img/favicon-icon.svg"
             type="../image/favicon-icon.svg"
         />
-        <link rel="stylesheet" href="../css/styles.css" />
         <link rel="stylesheet" href="../css/about-us.css" />
+        <link rel="stylesheet" href="../css/styles.css" />
 
-        
-        <title>Listings</title>
+        <title>About Us</title>
     </head>
     <body>
         <header class="main-image">
             <div class="header">
                 <div class="logo">
-                    <a href="index.html" class="logo"
-                        ><img src="../img/logo.svg" alt="JustHome_logo"
-                    /></a>
+                    <a href="index.html" class="logo">
+                        <img src="../img/logo.svg" alt="JustHome_logo" />
+                    </a>
                 </div>
                 <nav class="navbar">
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="">
+                            <a href="#">
                                 Home
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -42,7 +41,7 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="">
+                            <a href="#">
                                 Listings
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -55,7 +54,7 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="">
+                            <a href="#">
                                 Members
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -68,7 +67,7 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="">
+                            <a href="#">
                                 Blog
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -81,7 +80,7 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="">
+                            <a href="#">
                                 Pages
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -100,31 +99,13 @@
                     </div>
                     <div>
                         <div class="some-text">
-                            <a class="button" href="#popup"><img src="/img/profile_icon.svg" alt="profile_icon" /><a />
-                          </div>
-                        
-                          <div class="popup" id="popup">
-                            <div class="form">
-                                <div class="title">Welcome</div>
-                                <div class="subtitle">Let's create your account!</div>
-                                <div class="input-container ic1">
-                                  <input id="firstname" class="input" type="text" placeholder=" " />
-                                  <div class="cut"></div>
-                                  <label for="firstname" class="placeholder">First name</label>
-                                </div>
-                                <div class="input-container ic2">
-                                  <input id="lastname" class="input" type="text" placeholder=" " />
-                                  <div class="cut"></div>
-                                  <label for="lastname" class="placeholder">Last name</label>
-                                </div>
-                                <div class="input-container ic2">
-                                  <input id="email" class="input" type="text" placeholder=" " />
-                                  <div class="cut cut-short"></div>
-                                  <label for="email" class="placeholder">Email < />
-                                </div>
-                                <button type="text" class="submit">submit</button>
-                              </div>
-                          </div>
+                            <a class="button" href="#popup">
+                                <img
+                                    src="../img/profile_icon.svg"
+                                    alt="profile_icon"
+                                />
+                            </a>
+                        </div>
                     </div>
                     <button class="add-button" type="button">
                         Add Property
@@ -136,9 +117,9 @@
                     <span class="heading-primary-main"
                         >Believe in finding it</span
                     >
-                    <span class="heading-primary-sub"
-                        >Search properties for sale and to rent in the UK</span
-                    >
+                    <span class="heading-primary-sub">
+                        Search properties for sale and to rent in the UK
+                    </span>
                 </h1>
                 <div class="search">
                     <input
@@ -156,32 +137,196 @@
             <section class="why-us-section">
                 <div class="why-us-title">
                     <h2>Why You Should Work With Us</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="why-us-content">
-                        <div class="why-us-left-block">
-                            <img src="../img/wide-properties-icon.svg" alt="">
-                            <div class="why-us-description">
-                                <p>Wide Range of Properties</p>
-                                <p>We offer expert legal help for all related property items in Dubai.</p>
-                            </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
+                </div>
+                <div class="why-us-content">
+                    <div class="why-us-block">
+                        <img
+                            src="../img/wide-properties-icon.svg"
+                            alt="Wide Range of Properties"
+                        />
+                        <div class="why-us-description">
+                            <p>Wide Range of Properties</p>
+                            <p>
+                                We offer expert legal help for all related
+                                property items in Dubai.
+                            </p>
                         </div>
-                        <div class="why-us-mid-block">
-                            <img src="../img/wide-properties-icon.svg" alt="">
-                            <div class="why-us-description">
-                                <p>Wide Range of Properties</p>
-                                <p>We offer expert legal help for all related property items in Dubai.</p>
-                            </div>
+                    </div>
+                    <div class="why-us-block">
+                        <img
+                            src="../img/buy-rent-icon.svg"
+                            alt="Buy or Rent Homes"
+                        />
+                        <div class="why-us-description">
+                            <p>Buy or Rent Homes</p>
+                            <p>
+                                We offer expert legal help for all related
+                                property items in Dubai.
+                            </p>
                         </div>
-                        <div class="why-us-right-block">
-                            <img src="../img/wide-properties-icon.svg" alt="">
-                            <div class="why-us-description">
-                                <p>Wide Range of Properties</p>
-                                <p>We offer expert legal help for all related property items in Dubai.</p>
-                            </div>
+                    </div>
+                    <div class="why-us-block">
+                        <img
+                            src="../img/trust-icon.svg"
+                            alt="Trusted by Thousands"
+                        />
+                        <div class="why-us-description">
+                            <p>Trusted by Thousands</p>
+                            <p>
+                                We offer expert legal help for all related
+                                property items in Dubai.
+                            </p>
                         </div>
-                    </div>        
+                    </div>
+                </div>
+            </section>
+            <section class="review-section">
+                <div class="review-title">
+                    <p class="review-section-title">
+                        What our customers are saying us
+                    </p>
+                    <div class="review-rates">
+                        <div class="rating">
+                            <p>10m+</p>
+                            <p>Happy People</p>
+                        </div>
+                        <div class="rating">
+                            <p>4.88</p>
+                            <p>Overall rating</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="people-review">
+                    <div class="review-block">
+                        <div class="people-review-top-block">
+                            <img
+                                src="../img/profile-pic.png"
+                                alt="Cameron Williamson's Profile"
+                            />
+                            <div class="name-position">
+                                <p>Cameron Williamson</p>
+                                <p>Designer</p>
+                            </div>
+                            <img src="../img/quote-icon.svg" alt="Quote Icon" />
+                        </div>
+                        <p class="review-description">
+                            Searches for multiplexes, property comparisons, and
+                            the loan estimator. Works great. Lorem ipsum dolor
+                            sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dores.
+                        </p>
+                    </div>
+                    <div class="review-block">
+                        <div class="people-review-top-block">
+                            <img
+                                src="../img/profile.pic2.png"
+                                alt="Esther Howard's Profile"
+                            />
+                            <div class="name-position">
+                                <p>Esther Howard</p>
+                                <p>Marketing</p>
+                            </div>
+                            <img src="../img/quote-icon.svg" alt="Quote Icon" />
+                        </div>
+                        <p class="review-description">
+                            Sed ut perspiciatis unde omnis iste natus error sit
+                            voluptatem accusantium doloremque laudantium, totam
+                            rem aperiam, eaque ipsa quae ab illo inventore
+                            veritatis et quasi architecto beatae vitae.
+                        </p>
+                    </div>
+                    <div class="review-block">
+                        <div class="people-review-top-block">
+                            <img
+                                src="../img/profile.pic3.png"
+                                alt="Devon Lane's Profile"
+                            />
+                            <div class="name-position">
+                                <p>Devon Lane</p>
+                                <p>Developer</p>
+                            </div>
+                            <img src="../img/quote-icon.svg" alt="Quote Icon" />
+                        </div>
+                        <p class="review-description">
+                            Nemo enim ipsam voluptatem quia voluptas sit
+                            aspernatur aut odit aut fugit, sed quia consequuntur
+                            magni dolores eos qui ratione voluptatem sequi
+                            nesciunt. Neque porro quisquam.
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <section class="become-agent-section">
+                <div class="become-agent-left-block">
+                    <div class="become-agent-content">
+                        <p class="become-agent-title">
+                            Become a Real Estate Agent
+                        </p>
+                        <p class="become-agent-description">
+                            Pellentesque egestas elementum egestas faucibus sem.
+                            Velit nunc egestas ut morbi. Leo diam diam.
+                        </p>
+                    </div>
+                    <button class="learn-more-button" type="button">
+                        Register Now
+                        <img
+                            src="../img/arrow-for-button-icon.svg"
+                            alt="arrow-for-button-icon"
+                        />
+                    </button>
+                </div>
+                <div class="become-agent-right-block">
+                    <div class="become-agent-pic1"></div>
+                    <div class="become-agent-pic2"></div>
+                </div>
+            </section>
+            <section class="sponsors-section">
+                <p class="sponsors-title">
+                    Thousands of world’s leading companies trust Space
+                </p>
+                <div class="sponsors">
+                    <div class="sponsors-logo">
+                        <img src="../img/amazon-icon.svg" alt="amazon-icon" />
+                    </div>
+                    <div class="sponsors-logo">
+                        <img src="../img/amd-icon.svg" alt="amd-icon" />
+                    </div>
+                    <div class="sponsors-logo">
+                        <img src="../img/cisco-icon.svg" alt="cisco-icon" />
+                    </div>
+                    <div class="sponsors-logo">
+                        <img src="../img/dropcom-icon.svg" alt="dropcom-icon" />
+                    </div>
+                    <div class="sponsors-logo">
+                        <img
+                            src="../img/logitech-icon.svg"
+                            alt="logitech-icon"
+                        />
+                    </div>
+                    <div class="sponsors-logo">
+                        <img src="../img/spotify-icon.svg" alt="spotify-icon" />
+                    </div>
                 </div>
             </section>
         </main>
+        <footer>
+            <div class="iframe-footer-conteiner">
+                <iframe
+                    class="iframe-footer"
+                    src="../components/footer.html"
+                    scrolling="no"
+                    frameborder="0"
+                    width="100%"
+                    height="auto"
+                ></iframe>
+            </div>
+        </footer>
+        <script
+            src="https://kit.fontawesome.com/7d14a42481.js"
+            crossorigin="anonymous"
+        ></script>
     </body>
 </html>
