--- a/pages/listings.html
+++ b/pages/listings.html
@@ -15,7 +15,6 @@
         <link rel="stylesheet" href="../css/styles.css" />
         <link rel="stylesheet" href="../css/listings.css" />
 
-        
         <title>Listings</title>
     </head>
     <body>
@@ -109,16 +108,16 @@
                 </div>
             </div>
             <div class="listings-text-box">
-                <h1>
-                    The #1 site real estate professionals trust*
-                </h1>
+                <h1>The #1 site real estate professionals trust*</h1>
                 <p>
                     From as low as $10 per day with limited time offer
                     discounts.
                 </p>
                 <div class="yellow-paragraph">
-                    <p>Browse More Properties</p>
-                    <img src="../img/arrow-yellow.svg" alt="arrow-yellow" />
+                    <a href="#">
+                        <p>Browse More Properties</p>
+                        <img src="../img/arrow-yellow.svg" alt="arrow-yellow" />
+                    </a>
                 </div>
             </div>
         </header>
@@ -126,7 +125,9 @@
             <section class="cities-section">
                 <div class="cities-title">
                     <h2>Find Properties in These Cities</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
                 </div>
                 <div class="cities-widgets">
                     <div class="cities-widget">
@@ -154,7 +155,7 @@
             <section class="column-widgets">
                 <div class="categories-header">
                     <div class="categories-title">
-                        <h2 >Featured Categories</h2>
+                        <h2>Featured Categories</h2>
                         <p>Lorem ipsum dolor sit amet</p>
                     </div>
                     <div class="news-widget-btn">
@@ -167,6 +168,7 @@
                         </button>
                     </div>
                 </div>
+
                 <div class="row-widgets">
                     <div class="widget">
                         <div class="image-background"></div>
@@ -206,6 +208,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="widget">
                         <div class="image-background"></div>
                         <div class="widget-description">
@@ -244,6 +247,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="widget">
                         <div class="image-background"></div>
                         <div class="widget-description">
@@ -283,12 +287,13 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="slider-navigation">
                     <div class="arrow-icon">
-                        <img src="../img/arrow-left.svg" alt="arrow-left">
+                        <img src="../img/arrow-left.svg" alt="arrow-left" />
                     </div>
                     <div class="arrow-icon">
-                        <img src="../img/arrow-right.svg" alt="arrow-right">
+                        <img src="../img/arrow-right.svg" alt="arrow-right" />
                     </div>
                 </div>
             </section>
@@ -296,9 +301,14 @@
                 <div class="properties-content">
                     <div class="properties-title">
                         <h2>Exclusive Properties</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing
+                            elit.
+                        </p>
                     </div>
+
                     <div class="properties-widgets">
+                        <!-- Left Widget Section -->
                         <div class="properties-left-widget">
                             <div class="sale-featured">
                                 <div class="for-sale">
@@ -309,58 +319,95 @@
                                 </div>
                             </div>
                             <div class="left-widget-description">
-                                <p class="left-widget-title">Villa One Hyde Park</p>
+                                <p class="left-widget-title">
+                                    Villa One Hyde Park
+                                </p>
                                 <div class="left-widget-location">
-                                    <img src="../img/pin-icon-white.svg" alt="pin-icon">
+                                    <img
+                                        src="../img/pin-icon-white.svg"
+                                        alt="pin-icon"
+                                    />
                                     <p>2050 Bloomingdale Ave</p>
                                 </div>
                                 <div class="left-widget-description">
                                     <p>$120,000</p>
                                     <div class="widget-properties-description">
                                         <div class="rooms-description">
-                                            <img src="../img/bed-icon-white.svg" alt="bed-icon">
+                                            <img
+                                                src="../img/bed-icon-white.svg"
+                                                alt="bed-icon"
+                                            />
                                             <p>4</p>
                                         </div>
                                         <div class="rooms-description">
-                                            <img src="../img/bath-icon-white.svg" alt="bath-icon">
+                                            <img
+                                                src="../img/bath-icon-white.svg"
+                                                alt="bath-icon"
+                                            />
                                             <p>2</p>
                                         </div>
                                         <div class="rooms-description">
-                                            <img src="../img/square-icon-white.svg" alt="square-icon">
+                                            <img
+                                                src="../img/square-icon-white.svg"
+                                                alt="square-icon"
+                                            />
                                             <p>350</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+
+                        <!-- Right Widget Section -->
                         <div class="properties-right-widgets">
+                            <!-- Top Widget Slider -->
                             <div class="right-top-widget">
                                 <div class="widget-slider">
                                     <div class="widget-slider-nav">
-                                        <img src="../img/left-arror-white.svg" alt="left-arror-white">
+                                        <img
+                                            src="../img/left-arror-white.svg"
+                                            alt="left-arrow-white"
+                                        />
                                     </div>
                                 </div>
                                 <div class="widget-slider">
                                     <div class="widget-slider-nav">
-                                        <img src="../img/right-arrow-white.svg" alt="right-arrow-white">
+                                        <img
+                                            src="../img/right-arrow-white.svg"
+                                            alt="right-arrow-white"
+                                        />
                                     </div>
                                 </div>
                             </div>
+
+                            <!-- Bottom Widget Section -->
                             <div class="right-bottom-widget">
                                 <div class="bottom-left-widget">
                                     <div class="play-button">
-                                        <img src="../img/play-button.svg" alt="play-button">
+                                        <img
+                                            src="../img/play-button.svg"
+                                            alt="play-button"
+                                        />
                                     </div>
                                 </div>
                                 <div class="bottom-right-yellow">
-                                    <div class="bottom-right-yellow-description">
+                                    <div
+                                        class="bottom-right-yellow-description"
+                                    >
                                         <p class="number-properties">280+</p>
                                         <p>Properties</p>
-                                        <p class="properties-description">Explore our wide variety of properties to fid your dream home today</p>
+                                        <p class="properties-description">
+                                            Explore our wide variety of
+                                            properties to find your dream home
+                                            today
+                                        </p>
                                     </div>
                                     <div class="arrow-button">
                                         <div class="arrow-icon">
-                                            <img src="../img/arrow-for-button-icon.svg" alt="arrow-for-button-icon">
+                                            <img
+                                                src="../img/arrow-for-button-icon.svg"
+                                                alt="arrow-for-button-icon"
+                                            />
                                         </div>
                                     </div>
                                 </div>
@@ -378,7 +425,9 @@
                             elit.
                         </p>
                     </div>
+
                     <div class="news-widgets-row">
+                        <!-- News Widget 1 -->
                         <div class="news-widget">
                             <div class="news-widget-image"></div>
                             <div class="news-widget-date">
@@ -402,6 +451,8 @@
                                 </button>
                             </div>
                         </div>
+
+                        <!-- News Widget 2 -->
                         <div class="news-widget">
                             <div class="news-widget-image"></div>
                             <div class="news-widget-date">
@@ -425,6 +476,8 @@
                                 </button>
                             </div>
                         </div>
+
+                        <!-- News Widget 3 -->
                         <div class="news-widget">
                             <div class="news-widget-image"></div>
                             <div class="news-widget-date">
@@ -448,6 +501,8 @@
                                 </button>
                             </div>
                         </div>
+
+                        <!-- News Widget 4 -->
                         <div class="news-widget">
                             <div class="news-widget-image"></div>
                             <div class="news-widget-date">
@@ -479,8 +534,11 @@
             <div class="iframe-footer-conteiner">
                 <iframe
                     class="iframe-footer"
-                    src="/components/footer.html"
+                    src="../components/footer.html"
                     scrolling="no"
+                    frameborder="0"
+                    width="100%"
+                    height="auto"
                 ></iframe>
             </div>
         </footer>
