--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="#">
+                            <a href="/pages/listings.html">
                                 Listings
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -52,8 +52,8 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="#">
-                                Members
+                            <a href="/pages/about-us.html">
+                                About US
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
                         </button>
@@ -97,12 +97,11 @@
                     </div>
                     <div>
                         <div class="some-text">
-                            <a class="button" href="#popup">
-                                <img
-                                    src="/img/profile_icon.svg"
+                            <a class="button" href="/pages/popup.html"
+                                ><img
+                                    src="../img/profile_icon.svg"
                                     alt="profile_icon"
-                                />
-                            </a>
+                            /></a>
                         </div>
                     </div>
                     <button class="add-button" type="button">
