--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -21,14 +21,14 @@
         <header class="main-image">
             <div class="header">
                 <div class="logo">
-                    <a href="index.html" class="logo">
+                    <a href="../index.html" class="logo">
                         <img src="../img/logo.svg" alt="JustHome_logo" />
                     </a>
                 </div>
                 <nav class="navbar">
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="#">
+                            <a href="../index.html">
                                 Home
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -41,7 +41,7 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="#">
+                            <a href="/pages/listings.html">
                                 Listings
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -55,7 +55,7 @@
                     <div class="dropdown">
                         <button class="dropbtn">
                             <a href="#">
-                                Members
+                                About US
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
                         </button>
@@ -114,11 +114,12 @@
             </div>
             <div class="text-box">
                 <h1 class="heading-primary">
-                    <span class="heading-primary-main"
-                        >Believe in finding it</span
+                    <span class="heading-about-main"
+                        >Enjoy The Finest Homes</span
                     >
-                    <span class="heading-primary-sub">
-                        Search properties for sale and to rent in the UK
+                    <span class="heading-about-sub">
+                        From as low as $10 per day with limited time offer
+                        discounts
                     </span>
                 </h1>
                 <div class="search">
