--- a/pages/listings.html
+++ b/pages/listings.html
@@ -21,14 +21,14 @@
         <header class="main-image listings-main-image">
             <div class="header">
                 <div class="logo">
-                    <a href="index.html" class="logo"
+                    <a href="../index.html" class="logo"
                         ><img src="../img/logo.svg" alt="JustHome_logo"
                     /></a>
                 </div>
                 <nav class="navbar">
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="">
+                            <a href="../index.html">
                                 Home
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -41,7 +41,7 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="">
+                            <a href="#">
                                 Listings
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -54,8 +54,8 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="">
-                                Members
+                            <a href="/pages/about-us.html">
+                                About US
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
                         </button>
@@ -90,9 +90,6 @@
                             <a href="#">Link 2</a>
                             <a href="#">Link 3</a>
                         </div>
-                    </div>
-                    <div class="dropdown">
-                        <a href="#">Contact</a>
                     </div>
                 </nav>
                 <div class="nav-right-block">
