--- a/pages/listings.html
+++ b/pages/listings.html
@@ -103,6 +103,7 @@
                         Add Property
                     </button>
                 </div>
+                <div class="burger"><img src="/img/hamburger-menu.svg" alt=""></div>
             </div>
             <div class="listings-text-box">
                 <h1>The #1 site real estate professionals trust*</h1>
