--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                         Add Property
                     </button>
                 </div>
+                <div class="burger"><img src="/img/hamburger-menu.svg" alt=""></div>
             </div>
             <div class="text-box">
                 <h1 class="heading-primary">
@@ -134,123 +135,6 @@
             <section class="column-widgets">
                 <div class="categories-title">
                     <h2>Featured Properties</h2>
-                </div>
-                <div class="row-widgets">
-                    <div class="widget">
-                        <div class="image-background"></div>
-                        <div class="widget-description">
-                            <p class="widget-title">Luxury Family Home</p>
-                            <div class="location">
-                                <img src="img/pin-Icon.svg" alt="pin-Icon" />
-                                <p>1800-1818 79th St</p>
-                            </div>
-                            <div class="description-row">
-                                <div class="price">
-                                    <p>&#36;395,000</p>
-                                </div>
-                                <div class="specification">
-                                    <div class="bedrooms">
-                                        <img
-                                            src="img/bed-icon.svg"
-                                            alt="bed-icon"
-                                        />
-                                        <p>4</p>
-                                    </div>
-                                    <div class="bathrooms">
-                                        <img
-                                            src="img/bath-icon.svg"
-                                            alt="bath-icon"
-                                        />
-                                        <p>1</p>
-                                    </div>
-                                    <div class="square">
-                                        <img
-                                            src="img/square-icon.svg"
-                                            alt="square-icon"
-                                        />
-                                        <p>400</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Dunlicated widgets -->
-                    <div class="widget">
-                        <div class="image-background"></div>
-                        <div class="widget-description">
-                            <p class="widget-title">Luxury Family Home</p>
-                            <div class="location">
-                                <img src="img/pin-Icon.svg" alt="pin-Icon" />
-                                <p>1800-1818 79th St</p>
-                            </div>
-                            <div class="description-row">
-                                <div class="price">
-                                    <p>&#36;395,000</p>
-                                </div>
-                                <div class="specification">
-                                    <div class="bedrooms">
-                                        <img
-                                            src="img/bed-icon.svg"
-                                            alt="bed-icon"
-                                        />
-                                        <p>4</p>
-                                    </div>
-                                    <div class="bathrooms">
-                                        <img
-                                            src="img/bath-icon.svg"
-                                            alt="bath-icon"
-                                        />
-                                        <p>1</p>
-                                    </div>
-                                    <div class="square">
-                                        <img
-                                            src="img/square-icon.svg"
-                                            alt="square-icon"
-                                        />
-                                        <p>400</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="widget">
-                        <div class="image-background"></div>
-                        <div class="widget-description">
-                            <p class="widget-title">Luxury Family Home</p>
-                            <div class="location">
-                                <img src="img/pin-Icon.svg" alt="pin-Icon" />
-                                <p>1800-1818 79th St</p>
-                            </div>
-                            <div class="description-row">
-                                <div class="price">
-                                    <p>&#36;395,000</p>
-                                </div>
-                                <div class="specification">
-                                    <div class="bedrooms">
-                                        <img
-                                            src="img/bed-icon.svg"
-                                            alt="bed-icon"
-                                        />
-                                        <p>4</p>
-                                    </div>
-                                    <div class="bathrooms">
-                                        <img
-                                            src="img/bath-icon.svg"
-                                            alt="bath-icon"
-                                        />
-                                        <p>1</p>
-                                    </div>
-                                    <div class="square">
-                                        <img
-                                            src="img/square-icon.svg"
-                                            alt="square-icon"
-                                        />
-                                        <p>400</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
                 <div class="row-widgets">
                     <div class="widget">
