--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -21,9 +21,9 @@
         <header class="main-image">
             <div class="header">
                 <div class="logo">
-                    <a href="../index.html" class="logo">
-                        <img src="../img/logo.svg" alt="JustHome_logo" />
-                    </a>
+                    <a href="../index.html" class="logo"
+                        ><img src="../img/logo.svg" alt="JustHome_logo"
+                    /></a>
                 </div>
                 <nav class="navbar">
                     <div class="dropdown">
@@ -41,7 +41,7 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="/pages/listings.html">
+                            <a href="#">
                                 Listings
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -54,7 +54,7 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="#">
+                            <a href="/pages/about-us.html">
                                 About US
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -67,7 +67,7 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="#">
+                            <a href="">
                                 Blog
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">
-                            <a href="#">
+                            <a href="">
                                 Pages
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
@@ -97,20 +97,13 @@
                         <img src="../img/phone_icon.svg" alt="phone_icon" />
                         <a href="tel:+6868588666">+68 685 88666</a>
                     </div>
-                    <div>
-                        <div class="some-text">
-                            <a class="button" href="#popup">
-                                <img
-                                    src="../img/profile_icon.svg"
-                                    alt="profile_icon"
-                                />
-                            </a>
-                        </div>
-                    </div>
+
+                    <img src="../img/profile_icon.svg" alt="profile_icon" />
                     <button class="add-button" type="button">
                         Add Property
                     </button>
                 </div>
+                <div class="burger"><img src="/img/hamburger-menu.svg" alt=""></div>
             </div>
             <div class="text-box">
                 <h1 class="heading-primary">
