--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -103,7 +103,9 @@
                         Add Property
                     </button>
                 </div>
-                <div class="burger"><img src="/img/hamburger-menu.svg" alt=""></div>
+                <div class="burger">
+                    <img src="/img/hamburger-menu.svg" alt="" />
+                </div>
             </div>
             <div class="text-box">
                 <h1 class="heading-primary">
