--- a/pages/listings.html
+++ b/pages/listings.html
@@ -55,7 +55,7 @@
                     <div class="dropdown">
                         <button class="dropbtn">
                             <a href="/pages/about-us.html">
-                                About US
+                                About us
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
                         </button>
@@ -94,11 +94,18 @@
                 </nav>
                 <div class="nav-right-block">
                     <div class="phone">
-                        <img src="../img/phone_icon.svg" alt="phone_icon" />
+                        <img src="/img/phone_icon.svg" alt="phone_icon" />
                         <a href="tel:+6868588666">+68 685 88666</a>
                     </div>
-
-                    <img src="../img/profile_icon.svg" alt="profile_icon" />
+                    <div>
+                        <div class="some-text">
+                            <a class="button" href="/pages/popup.html"
+                                ><img
+                                    src="../img/profile_icon.svg"
+                                    alt="profile_icon"
+                            /></a>
+                        </div>
+                    </div>
                     <button class="add-button" type="button">
                         Add Property
                     </button>
