--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="dropdown">
                         <button class="dropbtn">
                             <a href="/pages/about-us.html">
-                                About US
+                                About us
                                 <i class="fa-solid fa-caret-down"></i>
                             </a>
                         </button>
